# Plia-OS

./: .gitignore  CLAUDE.md  README.md  launcher.py  pyproject.toml  requirements.txt
agents/: airllm_backend.py  calendar.py  calendar_store.py  chat_history.py  code.py  code_sandbox.py  cron_store.py  custom_agent.py  document_store.py  email_client.py  email_store.py  file.py  google_calendar.py  home.py  home_assistant.py  llm.py  memory.py  memory_store.py  network.py  observer_store.py  prompt_store.py  reminder.py  variable_store.py  weather.py  web.py  web_search.py  webhook_store.py  wifi.py  workflow_store.py
core/: agent.py  agent_store.py  config.py  context_compactor.py  credential_store.py  cron_loop.py  event_log.py  event_triggers.py  events.py  fork_store.py  intent_classifier.py  loader.py  log_buffer.py  main.py  mcp_client.py  notifier.py  observer.py  pipeline_registry.py  pipeline_runner.py  preset_store.py  proactive.py  proactive_memory.py  registry.py  reminder_loop.py  research_site_store.py  scheduled_msg_loop.py  scheduled_msg_store.py  shell_guard.py  shortcut_store.py  snapshot_store.py  supervisor.py  system_fit.py  token_usage.py  tool_guard.py  tor_manager.py
dashboard/: server.py
dashboard/static/: index.html
modules/: agent_tools.py  audio_tools.py  briefing_tools.py  calendar_tools.py  code_tools.py  cron_tools.py  document_index_tools.py  document_tools.py  email_tools.py  example_module.py  file_tools.py  home_tools.py  media_tools.py  memory_tools.py  network_tools.py  news_tools.py  observer_tools.py  pipeline_tools.py  proactive_tools.py  reminder_tools.py  research_tools.py  screenshot_tools.py  system_tools.py  tor_tools.py  utility_tools.py  weather_tools.py  web_tools.py  wireless_tools.py
scripts/: vendor_dramabox.py
tests/: conftest.py  test_agent.py  test_agent_crud_tools.py  test_agent_store.py  test_agent_trace.py  test_airllm_api.py  test_airllm_downloader.py  test_audio_device_picker.py  test_audio_tools.py  test_audio_upload.py  test_benchmark.py  test_briefing_tools.py  test_calendar_api.py  test_calendar_tools.py  test_chat_api.py  test_chat_export.py  test_chat_export_panel.py  test_chat_forks.py  test_chat_history.py  test_chatterbox_api.py  test_chatterbox_params.py  test_check_system_fit.py  test_clip_manager.py  test_clip_trimmer.py  test_clipboard.py  test_code_tools.py  test_color_converter.py  test_compact_stats.py  test_config.py  test_config_backup_restore.py  test_config_history.py  test_config_multiagent.py  test_config_persist.py  test_config_presets.py  test_context_compactor.py  test_credential_store.py  test_cron_loop_tool.py  test_cron_next_runs.py  test_cron_store.py  test_csv_viewer.py  (+167 more)
tests/agents/: test_calendar_node.py  test_calendar_store.py  test_code_node.py  test_code_sandbox.py  test_file_agent.py  test_google_calendar.py  test_home_assistant.py  test_home_node.py  test_llm.py  test_memory_node.py  test_memory_store.py  test_network_agent.py  test_parse_llm_json.py  test_reminder_agent.py  test_reminder_store.py  test_supervisor.py  test_web_node.py  (+3 more)
voice/: pipeline.py  stt.py  text_utils.py  tts.py  vram_broker.py  wake.py
(+72 files in other folders)
