[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plia-os"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "openwakeword>=0.4",
    "faster-whisper>=1.0",
    "kokoro>=0.9",
    "chatterbox-tts>=0.1",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "voice", "modules", "dashboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
